<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="sb_no_locking_type">No locking type specified</string>
    <string name="sb_no_locked_apps">No apps chosen to lock</string>
    <string name="sb_action_setup">SET UP</string>
    <string name="dialog_need_storage_permission_oreo">MaxLock needs the storage permission to read your wallpaper since Android 8.1 Oreo.
        Please grant it in the next dialog.</string>
    <string name="dialog_maxlock_updated">MaxLock was updated!</string>
    <string name="dialog_button_whats_new">What\'s new</string>
    <string name="dialog_button_got_it">Got it</string>
    <string name="notification_lock_new_app_title">Lock newly installed app?</string>
    <string name="notification_lock_new_app_action_never_again">Never show again</string>
    <string name="notification_lock_new_app_action_lock">Lock app</string>
    <string name="toast_lock_new_app_locked_successfully">Locked successfully</string>
    <string name="dialog_text_restart_required">MaxLock requires a restart for changes to take effect</string>
    <string name="toast_pro_required">Pro-version is required to use this feature!</string>
    <string name="fs_welcome_maxlock">Welcome to MaxLock!</string>
    <string name="fs_maxlock_description">MaxLock will protect your apps from unauthorized access</string>
    <string name="fs_app_package_installer">Package Installer</string>
    <string name="fs_app_settings">Settings</string>
    <string name="fs_app_xposed_installer">Xposed Installer</string>
    <string name="fs_recommended_apps">Enable further protection by locking these apps</string>
    <string name="fs_recommended_apps_summary">You should tick all these apps to make sure MaxLock cannot be disabled or uninstalled</string>
    <string name="pref_category_locking">Lock</string>
    <string name="pref_screen_locking_type">Locking type</string>
    <string name="pref_locking_type_password">Password</string>
    <string name="pref_locking_type_pin">PIN</string>
    <string name="pref_locking_type_knockcode">Knock code</string>
    <string name="pref_locking_type_pattern">Pattern</string>
    <string name="pref_set_password">Set password</string>
    <string name="toast_password_inconsistent">Password is inconsistent!</string>
    <string name="toast_password_null">Password can not be empty!</string>
    <string name="toast_password_changed">Password was changed!</string>
    <string name="dialog_text_password">Password</string>
    <string name="dialog_text_re_password">Retype password</string>
    <string name="choose_pin">Choose your PIN</string>
    <string name="pin_too_short">PIN must have a least 4 digits</string>
    <string name="continue_done">Touch continue when done</string>
    <string name="confirm_pin">Confirm your PIN</string>
    <string name="button_continue">Continue</string>
    <string name="choose_knock_code">Choose your knock code</string>
    <string name="knock_code_too_short">Knock code must be a least 4 touches</string>
    <string name="confirm_knock_code">Confirm your knock code</string>
    <string name="pref_category_fingerprint">Fingerprint</string>
    <string name="pref_disable_fingerprint">Disable fingerprint unlocking</string>
    <string name="pref_disable_fingerprint_summary">Fingerprint unlock is enabled by default when you have fingerprints enrolled to your device
        and can be used with any of the above locking types</string>
    <string name="pref_fingerprint_summary_non_enrolled">.\nCurrently, no fingerprints are enrolled.
        Enroll at least one in settings to use this feature.</string>
    <string name="pref_disable_fingerprint_summary_on">Fingerprint unlock disabled</string>
    <string name="pref_screen_locking_ui">Lockscreen UI</string>
    <string name="pref_background">Background image</string>
    <string-array name="background_types">
        <item>Wallpaper</item>
        <item>@string/pref_custom_color</item>
        <item>Custom image…</item>
    </string-array>
    <string name="pref_custom_color">Custom color</string>
    <string name="pref_hide_status_bar">Hide status bar/Fullscreen</string>
    <string name="pref_invert_color">Invert color of UI elements</string>
    <string name="pref_invert_color_summary">This sets the color of texts and dividers to black</string>
    <string name="pref_hide_title_bar">Hide title bar</string>
    <string name="pref_category_password_and_pin">Password and PIN</string>
    <string name="pref_quick_unlock">Quick unlock</string>
    <string name="pref_category_pin_only">PIN only</string>
    <string name="pref_shuffle_pin">Shuffle digits</string>
    <string name="pref_category_pin_and_knock_code">PIN and knock code</string>
    <string name="pref_hide_input_bar">Hide input bar</string>
    <string name="pref_hide_input_bar_summary">This hides clear button, too, however, you can still clear the code by long pressing digits/container</string>
    <string name="pref_category_pin_and_pattern">PIN and pattern</string>
    <string name="pref_haptic_feedback">Vibrate on input</string>
    <string name="pref_category_knock_code_only">Knock code only</string>
    <string name="pref_show_dividers">Show divider</string>
    <string name="pref_touch_visible">Make touches visible</string>
    <string name="pref_category_pattern_only">Pattern only</string>
    <string name="pref_show_path">Show path</string>
    <string name="pref_hide_fingerprint_icon">Hide fingerprint icon</string>
    <string name="pref_screen_locking_options">Locking options</string>
    <string name="pref_category_logging">Logging</string>
    <string name="pref_enable_logging">Enable logging</string>
    <string name="pref_enable_logging_summary">Log failed/unfinished unlock attempts</string>
    <string name="pref_view_logs">View logs</string>
    <string name="pref_screen_logs">Logs</string>
    <string name="menu_delete_log">Delete logs</string>
    <string name="logs_empty_text">There are no log entries</string>
    <string name="pref_category_fake_crash">Fake crash</string>
    <string name="pref_fake_crash_enable_all_apps">Enable for all apps</string>
    <string name="pref_fake_crash_enable_all_apps_summary">This overrides the setting from the app list for all apps</string>
    <string name="pref_fake_crash_passphrase">\"Report\" Passphrase</string>
    <string name="pref_fake_crash_passphrase_summary">The phrase the user needs to input in the dialog to open lockscreen</string>
    <string name="pref_fake_crash_instant_lockscreen">Show lockscreen instantly</string>
    <string name="pref_fake_crash_instant_lockscreen_summary">When enabled the lock screen is displayed directly after pushing the <i>\"Report"</i> button in the \"Unfortunately, X has stopped.\" dialog</string>
    <string name="pref_fake_crash_enable_passphrase_unlock">Unlock through passphrase</string>
    <string name="pref_fake_crash_enable_passphrase_unlock_summary">Directly unlock with the right passphrase, without showing lockscreen\n
        (Note: the passphrase is stored as plain-text in the private app storage and thus potentially insecure)</string>
    <string name="pref_category_other">Others</string>
    <string name="pref_enable_tasker">Enable Tasker integration</string>
    <string name="pref_screen_delayed_relock">Delayed re-lock options</string>
    <string name="pref_screen_delayed_relock_summary">Don\'t re-lock apps until a certain timespan has passed - previously called Intika I.Mod</string>
    <string name="pref_category_delay_general">General</string>
    <string name="pref_delay_general">General delayed re-lock</string>
    <string name="pref_delay_general_summary">Don\'t ask for another unlock within a certain period of time after any app has been unlocked</string>
    <string name="pref_delay_general_input">General delayed re-lock timer</string>
    <string name="pref_delay_general_input_summary">Enter a number to specify the delay time value in minute for global delayed re-lock</string>
    <string name="pref_category_delay_per_app">Per app</string>
    <string name="pref_delay_per_app">Per app delayed re-lock</string>
    <string name="pref_delay_per_app_summary">Don\'t ask for another unlock of a specific app within a certain period of time after the app has been unlocked</string>
    <string name="pref_delay_per_app_input">Per app delayed re-lock timer</string>
    <string name="pref_delay_per_app_input_summary">Enter a number to specify the delay time value in minute for per app delayed re-lock</string>
    <string name="pref_delay_needpro">Delayed re-lock - Pro version</string>
    <string name="lblRealtimeScannerToggle">Realtime Scanner</string>
    <string name="scan_files">SCAN FILES</string>
    <string name="scan_apps">SCAN APPS</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="help_goodware">Safe: The prediction score is less than 0.5.</string>
    <string name="help_malware">Malware: The prediction score is greater than 0.75.</string>
    <string name="help_risky">Risky: The prediction score is between 0.5 and 0.75.</string>
    <string name="help_unknown">Unknown: We cannot determine the type of the application.</string>
    <string name="sysapps_alert"><u>Note:</u> The scan system apps feature is included for experimental purpose only. We really do not recommend enabling it as it may show lot of false positives.</string>
    <string name="real_time_scan_desc">Real Time Scan is a feature that enables the anti-malware application to detect new app installations on the device and scan them. If enabled, the anti-malware app can automatically scan newly installed applications. You can enable/disable this feature in settings. This feature is enabled by default.</string>
    <string name="how_it_works_desc">LibreAV uses permissions and intent-filters to detect malicious apps. While scanning, it loads the machine learning model and extracts permissions and intents from the installed applications on your device. These extracted features are then fed to the machine learning model in the form of a vector. The machine learning model returns a prediction score between 0 and 1 that denote the degree of maliciousness of the scanned application. We use this score to classify the scanned app into one of the following categories:</string>
    <string name="project_description">LibreAV is an attempt to detect malwares in Android devices by utilizing machine learning approach.</string>
    <string name="what_is_libreav">* What is LibreAV?</string>
    <string name="what_is_real_time_scan">* What is Real Time Scan?</string>
    <string name="how_it_works">* How it works?</string>
    <string name="what_is_scan_system_apps_feature">* What does Scan System Apps feature mean?</string>
    <string name="scan_system_apps_desc">Scan system apps is a feature that tells the anti-malware application to analyze system applications also. You can enable/disable this feature in settings. This feature is disabled by default.</string>
    <string name="notice">⚠️⚠️ PLEASE BE AWARE THAT LIBREAV IS STILL IN ITS EARLY STAGES OF DEVELOPMENT AND MAY CONTAIN A LOT OF FALSE POSITIVES IN PREDICTION. THIS PROJECT IS DEVELOPED FOR EDUCATIONAL PURPOSES ONLY AND WE MAKE NO GUARANTEE THAT THE OUTPUT PRODUCED BY LIBREAV IS ABSOLUTELY CORRECT. SO PLEASE DO NOT JUDGE OTHER APPLICATIONS USING THE OUTPUT OF LIBREAV ALONE.⚠️⚠️</string>
    <string name="scan_apk">Scan APK</string>
    <string name="custom_scan">Custom Scan</string>
    <string name="AppLocker">APP LOCKER</string>
    <string name="permission_viewer">PERMISSION VIEWER</string>
    <string name="internal_storage">Internal Storage</string>
    <string name="free_space">Free Space:</string>
    <string name="used_space">Used Space:</string>
    <string name="total_space">Total Space:</string>
</resources>