<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/libreav_app_background"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <!-- Ring Stats bar for Internal Storage Stats-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:orientation="vertical"
        android:layout_marginTop="48dp"
        android:padding="32dp">
        <!-- Internal storage -->
        <LinearLayout
            android:id="@+id/internal_storage_tab"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@drawable/rounded_button"
            android:orientation="horizontal"
            android:padding="16dp">

            <com.ramijemli.percentagechartview.PercentageChartView
                android:id="@+id/storage_percent"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                app:pcv_animDuration="2000"
                app:pcv_animInterpolator="accelerate_decelerate"
                app:pcv_backgroundBarColor="@color/white"
                app:pcv_drawBackground="false"
                app:pcv_drawBackgroundBar="true"
                app:pcv_mode="ring"
                app:pcv_orientation="clockwise"
                app:pcv_startAngle="270"
                app:pcv_textSize="18sp" />
                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_marginLeft="32dp"
                        android:layout_marginStart="32dp"
                        >
                        <TextView
                            android:id="@+id/internal_storage_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="12sp"
                            android:maxLines="1"
                            android:text="@string/internal_storage"
                            android:textStyle="bold"
                            android:textAllCaps="true"
                            android:textColor="@color/white"
                            />
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingBottom="10dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/total_space"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/total_space"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="0dp"
                                android:text="--GB"
                                android:textSize="12sp"
                                android:textColor="@color/white"/>

                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/used_space"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/used_space"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="5dp"
                                android:text="--GB"
                                android:textSize="12sp"
                                android:textColor="@color/white"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/free_space"
                                android:textSize="12sp"
                                android:textStyle="bold"
                                android:textColor="@color/white"/>
                            <TextView
                                android:id="@+id/free_space"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingStart="5dp"
                                android:text="--GB"
                                android:textSize="12sp"
                                android:textColor="@color/white"/>

                        </LinearLayout>
                    </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal">

        <Button
            android:id="@+id/fileScan"
            android:layout_width="75pt"
            android:layout_height="20pt"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/rounded_button_left"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/scan_files"
            android:textColor="@color/black"
            app:useCompatPadding="true"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/appScan"
            android:layout_width="75pt"
            android:layout_height="20pt"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:background="@drawable/rounded_button_right"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/scan_apps"
            android:textColor="@color/black"
            app:useCompatPadding="true"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:paddingTop="45pt">

        <Button
            android:id="@+id/appLocker"
            android:layout_width="75pt"
            android:layout_height="20pt"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:background="@drawable/rounded_button_left"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/AppLocker"
            android:textColor="@color/black"
            app:useCompatPadding="true"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/permissionManager"
            android:layout_width="75pt"
            android:layout_height="20pt"
            android:layout_gravity="center_vertical|center_horizontal"
            android:layout_marginStart="1dp"
            android:layout_marginLeft="1dp"
            android:background="@drawable/rounded_button_right"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/permission_viewer"
            android:textColor="@color/black"
            app:useCompatPadding="true"
            tools:ignore="TextContrastCheck" />


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>